--- a/templates/base.twig
+++ b/templates/base.twig
@@ -56,5 +56,6 @@
             This function is available in functions.php as a global function.
          #}
         {{ function('stop_timber_timer') }}
+		{{options.tracking_script}}
 	</body>
 </html>
