--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -16,4 +16,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% for icon in options.add_favicons %}
+        <link rel='{{ icon.content_type }}' sizes='{{ icon.dimensions }}' href='{{ icon.icon_file.url }}' {% if icon.content_type == 'icon' %}type='image/png'{% endif %} />
+    {% endfor %}
     {{function('wp_head')}}
