--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -19,4 +19,6 @@
     {% for icon in options.add_favicons %}
         <link rel='{{ icon.content_type }}' sizes='{{ icon.dimensions }}' href='{{ icon.icon_file.url }}' {% if icon.content_type == 'icon' %}type='image/png'{% endif %} />
     {% endfor %}
+    <link rel='manifest' href='{{theme.link}}{{ options.manifest_location }}' />
+    <meta name='msapplication-config' content='{{theme.link}}{{ options.browserconfig_location }}'/>
     {{function('wp_head')}}
