--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,24 @@
-Copyright {{"now"|date('Y')}}
+<footer id="footer">
+    <div class="container clearfix">
+        <a href="#" class="clearfix">
+            <img src="{{ theme.link ~ '/assets/footer-logo.png' }}" width="160" alt="IP Global" />
+        </a>
+        <div class="col-6 col">
+            <div class="footer-left">
+                <p>From sourcing, financing, management and exit strategies, we manage your complete end-to-end investment process. With IP Global, your real estate investment is as straightforward as investing in traditional asset classes. Our expertise, experience and strong record have allowed us to help clients all over the globe invest in over USD 2 billion across 30 markets worldwide.</p>
+            </div>
+        </div>
+        <div class="col-5 col">
+            <div class="footer-right">
+                <h5>Global Headquarters</h5>
+                <p>
+                    <span>Hong Kong</span> <br/>
+                    Suite 601-6, 6th Floor, Harcourt House,<br/>
+                    39 Gloucester Road, Wanchai, Hong Kong<br/>
+                    <span>+852 3965 9300<br/>
+            info@ipglobal-ltd.com</span></p>
+                <p class="copyright">&copy; 2018 IP Global | All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+</footer>
