--- a/templates/base.twig
+++ b/templates/base.twig
@@ -7,17 +7,13 @@
 {% endblock %}
 
 	<body class="{{body_class}}" data-template="base.twig">
-		<header class="header" >
-			{% block header %}
-				<div class="wrapper">
-					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'menu': menu.get_items} %}
-					</nav><!-- #nav -->
-				</div>
-			{% endblock %}
+
+		<header id="ip-header">
+			<div class="site-logo">
+				<a href="/">
+					<img src="{{ theme.link ~ '/assets/logo.svg' }}" alt="IP GLOBAL" />
+				</a>
+			</div>
 		</header>
 
 		<section id="content" role="main" class="content-wrapper">
@@ -27,11 +23,6 @@
 					Sorry, no content
 				{% endblock %}
 			</div>
-			{% if sidebar %}
-				<aside class="layout-sidebar">
-					{{sidebar}}
-				</aside>
-			{% endif %}
 		</section>
 
 		{% block footer %}
@@ -42,10 +33,10 @@
 		{% endblock %}
 
         {# 
-            Stop Page Performance Timer
-
+            Stop Page Performance Timers
             This function is available in functions.php as a global function.
          #}
         {{ function('stop_timber_timer') }}
+  
 	</body>
 </html>
