--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -16,4 +16,25 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ theme.link ~ '/apple-touch-icon.png' }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ theme.link ~ '/favicon-32x32.png' }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ theme.link ~ '/favicon-16x16.png' }}">
+    <link rel="manifest" href="{{ theme.link ~ '/site.webmanifest' }}">
+    <link rel="mask-icon" href="{{ theme.link ~ '/safari-pinned-tab.svg' }}" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="{{ theme.link ~ '/main.css' }}" type="text/css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115193421-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115193421-1');
+    </script> -->
+
     {{function('wp_head')}}
