--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -10,4 +10,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{ fn('bloginfo', 'atom_url') }}
     {{function('wp_head')}}
+    {{ options.head_scripts }}
