Adding placeholder favicon to remind developers that all our sites should have favicons

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -10,6 +10,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Opera Speed Dial Favicon -->
+    <link rel="icon" type="image/png" href="{{theme.link}}/dist/images/favicons/favicon.gif" />
+		
+	<!-- Standard Favicon -->
+	<link rel="icon" type="image/x-icon" href="{{theme.link}}/dist/images/favicons/favicon.gif" />
+
+	<!-- For iPhone 4 Retina display: -->
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{theme.link}}/dist/images/favicons/favicon.gif">
+
+	<!-- For iPad: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{theme.link}}/dist/images/favicons/favicon.gif">
+
+	<!-- For iPhone: -->
+	<link rel="apple-touch-icon-precomposed" href="{{theme.link}}/dist/images/favicons/favicon.gif">
+
     {{ fn('bloginfo', 'atom_url') }}
     {{function('wp_head')}}
     {{ options.head_scripts }}
