--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -10,6 +10,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Please remove this line when the site goes live --><meta name="robots" content="noindex,follow" /><!-- Please remove this line when the site goes live -->
 
     <!-- Opera Speed Dial Favicon -->
     <link rel="icon" type="image/png" href="{{theme.link}}/dist/images/favicons/favicon.gif" />
