Removing excess code, adding made by crowd

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -25,9 +25,9 @@
 			{% endblock %}
 		</header>
 
-		<section id="content" role="main" class="content-wrapper">
+		<section id="content" role="main">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
-			<div class="wrapper {{sidebar_class}}">
+			<div class="wrapper text-body">
 				{% block content %}
 					Sorry, no content
 				{% endblock %}
