--- a/src/sass/cascade/reset.scss
+++ b/src/sass/cascade/reset.scss
@@ -1,24 +1,3 @@
-$primary: #000000;
-
-/*This CSS reset includes Wordpress styles*/
-
-html {
-    background-color: $primary; /* for macs when you scroll outside of the body, please pick a colour which matches the header and footer*/
-    scroll-behavior: smooth; /*for smooth scrolling from when internal anchorpoints are used*/
-    height: 100%;
-}
-
-body{
-	background-color:#FFF;
-	line-height: 1.5;
-	height: 100%;
-}
-
-a{
-	color: inherit; /*gets rid of blue links*/
-}
-
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -40,6 +19,28 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+
+$primary: #000000;
+
+/*This CSS reset includes Wordpress styles*/
+
+html {
+    background-color: $primary; /* for macs when you scroll outside of the body, please pick a colour which matches the header and footer*/
+    scroll-behavior: smooth; /*for smooth scrolling from when internal anchorpoints are used*/
+    height: 100%;
+}
+
+body{
+	background-color:#FFF;
+	line-height: 1.5;
+	height: 100%;
+	font-family: Arial, sans-serif;
+}
+
+a{
+	color: inherit; /*gets rid of blue links*/
+}
+
 * {
   box-sizing: border-box;
 }
@@ -47,7 +48,6 @@ time, mark, audio, video {
 ::before,
 ::after {
   box-sizing: border-box;
-  content:"";
 }
 
 
@@ -61,10 +61,16 @@ time, mark, audio, video {
 /*Basic*/
 
 .text-body{
-	p{
+	p, h1, h2, h3, h4, h5, h6{
 		padding-bottom: 1rem;
-		&:last-of-type{
+		&:last-child{
 			padding-bottom:0;
 		}
+	}
+	h1{
+		font-size:2.5rem;
+	}
+	h2{
+		font-size: 1.8;
 	}
 }
