--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,6 @@
-Copyright {{"now"|date('Y')}}
+<div class="left">
+	Copyright {{"now"|date('Y')}}
+</div>
+<div class="right">
+	Site by <a href="https://thisiscrowd.com" target="_blank">Crowd</a>
+</div>
