--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,6 +1,9 @@
 <div class="left">
 	Copyright {{"now"|date('Y')}}
 </div>
+<div class="center">
+	<a href="#">Privacy Policy</a>
+</div>
 <div class="right">
 	Site by <a href="https://thisiscrowd.com" target="_blank">Crowd</a>
 </div>
