--- a/src/sass/cascade/reset.scss
+++ b/src/sass/cascade/reset.scss
@@ -33,7 +33,7 @@ html {
 body{
 	background-color:#FFF;
 	line-height: 1.5;
-	height: 100%;
+	min-height: 100%;
 	font-family: Arial, sans-serif;
 }
 
