Adding ability to change android header colour

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -26,5 +26,10 @@
 	<!-- For iPhone: -->
 	<link rel="apple-touch-icon-precomposed" href="{{theme.link}}/dist/images/favicons/favicon.gif">
 
+
+
+    <meta name="theme-color" content="{{options.android_navigation_bar_colour}}">
+    <meta name="msapplication-navbutton-color" content="{{options.android_navigation_bar_colour}}">
+
     {{function('wp_head')}}
     {{ options.head_scripts }}
