--- a/templates/base.twig
+++ b/templates/base.twig
@@ -58,9 +58,7 @@
 				"url": "{{ site.url }}",
 				"description": "{{ site.description }}",
 				"sameAs": [
-					{% for profile in options.social_profiles|reverse %}
-						"{{ profile.url }}",
-					{% endfor %}
+					{{ fn('do_shortcode', '[social_links raw="1" delim=","]') }}
 				]
 			}
 		</script>
