--- a/src/sass/essential/common/_properties.scss
+++ b/src/sass/essential/common/_properties.scss
@@ -139,3 +139,16 @@ ul.properties{
         }
     }
 }
+
+.propertyhive-similar-properties-shortcode{
+    ul.properties{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 40px 30px;
+
+        & > li{
+            /*display: flex;*/
+
+        }
+    }
+}
