proeprty detail - calculator tabs - withput styles

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -64,6 +64,7 @@
 @import "sections/newsletter";
 @import "sections/content-image";
 @import "sections/cta-carousel";
+@import "sections/property-calculator";
 
 
 /*
