--- a/templates/propertyhive/shortcode/similar-properties.twig
+++ b/templates/propertyhive/shortcode/similar-properties.twig
@@ -16,6 +16,6 @@
             </div>
         </div>
 
-        {{ fn('do_shortcode','[similar_properties property_id=' ~ property_id ~ ']') }}
+        {{ fn('do_shortcode','[similar_properties property_id=' ~ property_id ~ ' per_page=3]') }}
     </div>
 </section>
