--- a/src/sass/essential/sections/_newsletter.scss
+++ b/src/sass/essential/sections/_newsletter.scss
@@ -3,6 +3,8 @@
     padding: 60px 0;
 
     .newsletter-form{
+        margin-bottom: 0;
+
         &--box{
             background-color: #FFF;
             display: flex;
