--- a/templates/propertyhive/property-detail/tabs-nav.twig
+++ b/templates/propertyhive/property-detail/tabs-nav.twig
@@ -1,17 +1,28 @@
-<ul class="nav nav-tabs">
-    <li class="nav-item">
-        <a class="nav-link active" data-toggle="tab" href="#property-info-description">Description</a>
+<ul class="property-detail-tabs nav">
+    <li>
+        <a class="active" data-toggle="tab" href="#property-info-description">Description</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#property-info-location">Location</a>
+    <li>
+        <a data-toggle="tab" href="#property-info-location">Location</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#property-info-floorplan">Floorplan</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#property-info-epc">EPC</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#property-info-schools">Schools</a>
+
+    {% if floorplan_urls %}
+
+        <li>
+            <a data-toggle="tab" href="#property-info-floorplan">Floorplan</a>
+        </li>
+
+    {% endif %}
+
+    {% if epc_urls %}
+
+        <li>
+            <a data-toggle="tab" href="#property-info-epc">EPC</a>
+        </li>
+
+    {% endif %}
+
+    <li>
+        <a data-toggle="tab" href="#property-info-schools">Schools</a>
     </li>
 </ul>
