property detail - back to search link

--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -1,4 +1,13 @@
 .single-property{
+    .property-detail-back-action-wrap{
+        margin-bottom: 30px;
+
+        a{
+            font-weight: normal;
+            text-transform: uppercase;
+        }
+    }
+
     div.property{
         .entry-summary{
             margin-bottom: 30px;
