property detail - back to search link - icon color red

--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -5,6 +5,10 @@
         a{
             font-weight: normal;
             text-transform: uppercase;
+
+            i{
+                color: $brand-main-red;
+            }
         }
     }
 
