--- a/src/sass/essential/pages/_property-detail.scss
+++ b/src/sass/essential/pages/_property-detail.scss
@@ -131,14 +131,24 @@
 
     .section-property-detail-content-tabs{
         .property-detail-description-wrapper{
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+            }
+
+            .property-rent-details{
+                margin-bottom: 40px;
+
+                h3{
+                    margin-bottom: 25px;
+                }
+            }
+
             .features{
                 font-weight: normal;
 
                 ul{
-                    list-style: none;
-                    margin: 0;
-                    padding: 0;
-
                     li{
                         padding-left: 25px;
                         position: relative;
