--- a/templates/propertyhive/shortcode/calculators.twig
+++ b/templates/propertyhive/shortcode/calculators.twig
@@ -5,15 +5,15 @@
                 <div class="col-xl-8">
                     <div class="property-calculators-wrapper">
 
-                        <ul class="nav nav-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
+                        <ul class="nav">
+                            <li>
+                                <a class="active" data-toggle="tab" href="#property_mortgage_calculator">Mortgage Calculator</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
+                            <li>
+                                <a data-toggle="tab" href="#property_stamp_duty_calculator">Stamp Duty Calculator</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
+                            <li>
+                                <a data-toggle="tab" href="#property_rental_yield_calculator">Rental Yield Calculator</a>
                             </li>
                         </ul>
 
