blog insights list + single page(withput style) + latest posts section connected to source code

--- a/components/sections/latest_posts.twig
+++ b/components/sections/latest_posts.twig
@@ -2,6 +2,7 @@
     title: section.lp_title,
     more_link: {
         title: 'More News & Insights',
-        url: '#'
-    }
+        url: options.page_url.blog_page
+    },
+    posts: fn('get_latest_posts')
 } %}
