--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -61,6 +61,7 @@
 * Sections
 */
 @import "sections/home-hero";
+@import "sections/page-top";
 @import "sections/newsletter";
 @import "sections/content-image";
 @import "sections/cta-carousel";
@@ -72,6 +73,7 @@
 */
 @import "pages/properties-search";
 @import "pages/property-detail";
+@import "pages/insights-list";
 
 
 // Responsive Design
