--- a/components/sections/content_image.twig
+++ b/components/sections/content_image.twig
@@ -1,6 +1,6 @@
 <section class="page-section page-section--padding50 section-content-image {{ section.ci_logo_watermark ? 'has-logo-watermark' : '' }}">
     <div class="container">
-        <div class="row no-gutters ali">
+        <div class="row no-gutters">
             <div class="col-xl-8">
                 <div class="bg-primary section-content-image--content" style="padding: 70px 200px 70px 80px;left: -80px;margin-right: -80px;position: relative;">
                     <h2 class="h1">{{ section.ci_title }}</h2>
