container for default page + fix style for properties list

--- a/src/sass/essential/main.scss
+++ b/src/sass/essential/main.scss
@@ -71,6 +71,7 @@
 /*
 * Pages
 */
+@import "pages/default";
 @import "pages/properties-search";
 @import "pages/property-detail";
 @import "pages/insights-list";
