--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -101,7 +101,7 @@
         &.view-grid{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
+            /*grid-template-rows: 1fr 1fr 1fr;*/
             gap: 40px 30px;
         }
 
