proeprty insights archive page for the categories + change acf field for blog list page

--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -3,7 +3,10 @@
 {% block content %}
 
     {% include 'components/static-sections/page-top.twig' with {
-        post: post
+        custom: {
+            title: title,
+            thumbnail: head_thumbnail
+        }
     } %}
 
     <div class="section-insight-total">
