--- a/templates/base.twig
+++ b/templates/base.twig
@@ -14,7 +14,7 @@
         {% endblock %}
 
 		<section id="content" role="main">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
+			{#{% if title %}<h1>{{title}}</h1>{% endif %}#}
 			<div class="wrapper">
 				{% block content %}
 					Sorry, no content
