--- a/src/sass/essential/pages/_properties-search.scss
+++ b/src/sass/essential/pages/_properties-search.scss
@@ -98,12 +98,12 @@
     padding: 50px 0;
 
     ul.properties{
-        &.view-grid{
+        /*&.view-grid{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            /*grid-template-rows: 1fr 1fr 1fr;*/
+            !*grid-template-rows: 1fr 1fr 1fr;*!
             gap: 40px 30px;
-        }
+        }*/
 
         &.view-list{
             & > li{
