blog posts pagination style

--- a/src/sass/essential/pages/_insights-list.scss
+++ b/src/sass/essential/pages/_insights-list.scss
@@ -8,4 +8,9 @@
             color: $support-color2;
         }
     }
+
+    .sa-pagination{
+        margin-top: 60px;
+        text-align: right;
+    }
 }
