--- a/src/sass/essential/common/_basic.scss
+++ b/src/sass/essential/common/_basic.scss
@@ -10,3 +10,35 @@ body{
     font-weight: 300;
     color: $brand-main-blue;
 }
+
+.sa-pagination{
+    font-size: 16px;
+
+    ul.pages{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+
+        li{
+            display: inline-block;
+
+            span,
+            a{
+                display: block;
+                padding: 3px 0.782rem;
+
+                &.next,
+                &.prev{
+                    &:not(:hover) {
+                        opacity: 0.6;
+                    }
+                }
+
+                &.current{
+                    background-color: $brand-main-blue;
+                    color: #FFF;
+                }
+            }
+        }
+    }
+}
